--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
   },
   "homepage": "https://github.com/MessyMice/247streamer#readme",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "discord.js-selfbot-v13": "^2.3.74",
+    "discord.js-selfbot-v11": "^11.5.1",
     "discordrpcgenerator": "^1.2.0",
     "express": "^4.18.1",
-    "gradient-string": "^2.0.1",
-    "prism-media": "^1.3.4"
+    "gradient-string": "^2.0.1"
   }
 }
